--- a/src/SharpCode/SharpCode.csproj
+++ b/src/SharpCode/SharpCode.csproj
@@ -6,6 +6,18 @@
     <Nullable>Enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <PackageId>SharpCode</PackageId>
+    <Authors>Ivan Stoyanov</Authors>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <Description>Easy source code generator.</Description>
+    <Copyright>Copyright © 2020</Copyright>
+    <PackageTags>source code generator</PackageTags>
+    <NoPackageAnalysis>true</NoPackageAnalysis>
+    <RepositoryUrl>https://github.com/ful-stackz/SharpCode</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis" Version="3.7.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.7.0" />
