--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,9 +16,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: 'Package and Publish'
+        env:
+          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
         run: >
           ./PackAndPublish
-          -NuGetApiKey:${{ secrets.NUGET_API_KEY }}
           -Publish
           -Beta:$${{ github.event.inputs.publish_beta }}
         shell: pwsh
