--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,9 +3,6 @@ name: Release
 on:
   workflow_dispatch:
     inputs:
-      nuget_api_key:
-        description: 'NuGet API key'
-        required: true
       publish_beta:
         description: 'Publish as beta'
         required: false
@@ -19,9 +16,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: 'Package and Publish'
+        env:
+          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
         run: >
           ./PackAndPublish
-          -NuGetApiKey:${{ github.event.inputs.nuget_api_key }}
           -Publish
           -Beta:$${{ github.event.inputs.publish_beta }}
         shell: pwsh
