--- a/.editorconfig
+++ b/.editorconfig
@@ -108,7 +108,7 @@ dotnet_separate_import_directive_groups = false
 # C# formatting settings
 
 # New-line options
-csharp_new_line_before_open_brace = methods, properties, control_blocks, types
+csharp_new_line_before_open_brace = all
 csharp_new_line_before_else = true
 csharp_new_line_before_catch = true
 csharp_new_line_before_finally = true
