--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,10 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, task/code-coverage ]
   pull_request:
     branches: [ main ]
+    types: [ opened, synchronize, reopened ]
 
 jobs:
   build:
@@ -26,6 +27,16 @@ jobs:
       run: dotnet build --configuration Release --no-restore
       working-directory: ./src/SharpCode
 
-    - name: Test
-      run: dotnet test --no-restore --verbosity normal
+    - name: Run unit tests and collect code coverage
+      run: >
+        dotnet test
+        --verbosity diag
+        /p:CollectCoverage=true
+        /p:CoverletOutput=../../coverage/
+        /p:CoverletOutputFormat=cobertura
       working-directory: ./src/SharpCode.Test
+
+    - name: Upload coverage to codecov
+      uses: codecov/codecov-action@v1.0.13
+      with:
+        file: ./coverage/coverage.cobertura.xml
