Add SonarAnalyzer.CSharp and fix code to adhere
- treat warnings as errors for SharpCode and SharpCode.Test
- disable dotnet_style_prefer_conditional_expression_over_return

--- a/src/SharpCode.Test/.editorconfig
+++ b/src/SharpCode.Test/.editorconfig
@@ -1,5 +1,8 @@
 [*.cs]
 
+# Disable XML comment analysis, since this project does not generate XML docs
+dotnet_diagnostic.SA0001.severity = none
+
 # Unused value preferences
 # Suppress, otherwise every Assert.Throws<T>() must use the discard variable
 csharp_style_unused_value_expression_statement_preference = discard_variable:none
