--- a/.editorconfig
+++ b/.editorconfig
@@ -35,7 +35,7 @@ dotnet_style_prefer_inferred_tuple_names = true:warning
 dotnet_style_prefer_inferred_anonymous_type_member_names = true:warning
 dotnet_style_prefer_auto_properties = true:error
 dotnet_style_prefer_conditional_expression_over_assignment = true:warning
-dotnet_style_prefer_conditional_expression_over_return = true:suggestion
+dotnet_style_prefer_conditional_expression_over_return = false
 dotnet_style_prefer_compound_assignment = true:suggestion
 
 # Null-checking preferences
