Exclude Exception classes from code coverage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
         dotnet test
         --verbosity diag
         /p:CollectCoverage=true
+        /p:Exclude="[*]SharpCode.*Exception"
         /p:CoverletOutput=../../coverage/
         /p:CoverletOutputFormat=cobertura
       working-directory: ./src/SharpCode.Test
