--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ main, task/introspection ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
     types: [ opened, synchronize, reopened ]
